// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`:ie11 should transform :ie11(...) into an ie11 hack (multiple selectors) 1`] = `
"_:-ms-fullscreen,:root .fooga .wooga {
    color: red;
}"
`;

exports[`:ie11 should transform :ie11(...) into an ie11 hack (single selector) 1`] = `
"_:-ms-fullscreen,:root .fooga {
    color: red;
}"
`;

exports[`:ie11 should work with postcss-nested 1`] = `
".fooga {
    color: red;
}
    
    _:-ms-fullscreen,:root .fooga {
        color: blue;
    }"
`;
